# vali

./: .env  README.md  main.py  pyproject.toml
core/: FCFFprojection.py  config.py  fetch_data_by_id.py  generate_report_llm.py  llm.py  pdf_utils.py  run_valuation.py  startup_valuation.py
core/report_agent/: agent.py  personas.py
db/: crud.py  mongodb.py
models/: PDFMODEL.py  question.py
